--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "redux": "^4.2.1",
-    "redux-toolkit": "^1.1.2"
+    "redux-toolkit": "^1.1.2",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
