--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "vite --open --host",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "netlify dev": "netlify dev"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
