--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@smastrom/react-rating": "^1.3.2",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
