--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.15.0",
     "react-type-animation": "^3.1.0",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "redux-toolkit": "^1.1.2",
     "serverless-http": "^3.2.0"
   },
