--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase": "^10.4.0",
     "nodemon": "^3.0.1",
     "rc-slider": "^10.2.1",
     "react": "^18.2.0",
