--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "cd functions && node index.js",
+    "start": "cd server && node index.js",
     "dev": "vite --open --host",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
     "netlify dev": "netlify dev"
   },
   "dependencies": {
