--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-toolkit": "^1.1.2",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
