--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "rc-slider": "^10.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.12",
     "react-intersection-observer": "^9.5.3",
     "react-redux": "^8.1.2",
     "react-router": "^6.15.0",
