--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^3.0.1",
     "rc-slider": "^10.2.1",
     "react": "^18.2.0",
+    "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
     "react-intersection-observer": "^9.5.3",
