--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "axios": "^1.5.0",
     "firebase": "^10.4.0",
     "framer-motion": "^10.16.12",
+    "i18next": "^23.7.16",
     "rc-slider": "^10.2.1",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
+    "react-i18next": "^14.0.0",
     "react-intersection-observer": "^9.5.3",
     "react-redux": "^8.1.2",
     "react-router": "^6.15.0",
